# DAG

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TODO  TODO (copy)  actions_concurrency  bugs.txt  build.sh  finalremark  gui.txt  imgui.ini  memoryRelatedPolicies  notebook  notebook2  notebook2 (copy)  notebook3  todo.txt  vectorfucntions  whythisdesignisbetter
EditorBin/: GenerativeNodes.txt  imgui.ini  mechanics  notebook  savetest1.xdg  savetest2.xdg  trees.txt
EditorBin/assets/common/KM/: GamePadKeyMap.kmf  carmap.kmf  db.kmf  fdl4.kmf  fileDEL2.kmf  km17.kmf  km5.kmf  km6.kmf
EditorBin/assets/common/scenes/: scene1.xdg  test1.xdg
EditorBin/assets/v1/scenes/: win2.xdg  win3.xdg  win6.xdg  win8.xdg
EditorBin/shaderPrograms/: 1.model_loading.vs  animation.vs  framebuffer.fs
GameBin/: xdg.cfg
GameBin/assets/common/KM/: CameraAxesMap.kmf  GamePadKeyMap.kmf  km17.kmf
GameBin/assets/common/scenes/: bunny.xdg  myworld.xdg  scene.xdg
GameBin/assets/v1/scenes/: win.xdg  win4.xdg  win5.xdg  win7.xdg
GameBin/fonts/: CMakeLists.txt
GameBin/shaderPrograms/: 1.model_loading.fs  FTextShader.glsl  VTextShader.glsl  framebuffer.fs
glslSandbox/shader1/: shader1.glsl
glslSandbox/shader2/: shader.glsl
src/: CMakeLists.txt
src/Editor/: CMakeLists.txt
src/Editor/Actions/: CameraAction.cpp  CameraAction.hpp
src/Editor/DefaultActions/: CameraAction.hpp  CameraActionBackwards.hpp  CameraActionDown.hpp  CameraActionForward.hpp  CameraActionLeft.hpp  CameraActionLook.hpp  CameraActionRight.hpp  CameraActionUp.hpp
src/Editor/include/: Application.hpp  EditorUI.hpp  NodeFactory.hpp
src/Editor/src/: Application.cpp  Callbacks.cpp  EditorUI.cpp  Main.cpp  NodeFactory.cpp  ScenesWIndow.cpp  init_RTTI.cpp  layout.cpp
src/EditorApp/: CMakeLists.txt  RegisterActionsHere.txt  main.cpp
src/EditorApp/include/: Application.hpp
src/EditorApp/src/: Application.cpp  main.cpp
src/Graph/: CMakeLists.txt
src/Graph/include/: Graph.hpp
src/Graph/src/: CMakeLists.txt  Graph.cpp
src/Infrastructure/: CMakeLists.txt
src/Infrastructure/include/: CIS.hpp  IStream.hpp  Observer.hpp  Subject.hpp
src/Infrastructure/src/: CIS.cpp  IStream.cpp  Observer.cpp  Relay.cpp  Subject.cpp  SubjectsContainer.cpp
src/IntApp/: CMakeLists.txt
src/IntApp/src/: main.cpp
src/Interpreter/: CMakeLists.txt
src/Interpreter/include/: APPFactory.hpp  CLIApplication.hpp  CommandFunctions.hpp  Interpreter.hpp  REPLApplication.hpp
src/Interpreter/src/: CLIApplication.cpp  CommandFunctions.cpp  Interpreter.cpp  REPLApplication.cpp
src/Mechanics/: Action.hpp
src/ProjectMgr/: CMakeLists.txt
src/ProjectMgr/include/: Project.hpp
src/ProjectMgr/src/: Project.cpp
src/backends/: CMakeLists.txt
src/backends/backend/: CMakeLists.txt  backend.cpp  backend.hpp
src/backends/glbackend/: CMakeLists.txt  glbe.cpp  glbe.hpp
src/backends/glesbackend/: CMakeLists.txt  glbe.cpp  glbe.hpp
src/gameApp/: CMakeLists.txt
src/gameApp/DefaultActions/: CameraActionBackwards.hpp  CameraActionDown.hpp  CameraActionForward.hpp  CameraActionLook.hpp  CameraActionRight.hpp  CameraActionUp.hpp
src/gameApp/include/: Application.hpp  Context.hpp
src/gameApp/src/: Application.cpp  Callbacks.cpp  Main.cpp  Utils.cpp  actionRegistration.cpp
src/gameEXE/: CMakeLists.txt  main.cpp
src/libAssets/: Action.cpp  Action.hpp  AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  KeyMap.cpp  KeyMap.hpp  NodeFactory.cpp  NodeFactory.hpp  Script.hpp  StageManager.hpp
src/libGraphics/: CMakeLists.txt  TODO.txt
src/libGraphics/objectSystem/: CMakeLists.txt  Object.cpp  Object.hpp  Object.inl  RTTI.cpp  RTTI.hpp  RTTI.inl  RTTIMCR.h  Stream.cpp  Stream.hpp  TypeList.hpp
src/libGraphics/rendering/: CMakeLists.txt  Font.cpp  Font.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Renderer.cpp  Renderer.hpp
src/libGraphics/sceneGraph/: AnimatedNode.cpp  AnimatedNode.hpp  CMakeLists.txt  Camera.hpp  CameraNode.hpp  GeometryNode.cpp  GeometryNode.hpp  LightNode.hpp  MeshInstance.cpp  MeshInstance.hpp  Model copy.cpp  Model copy.hpp  Model1.cpp  Model1.hpp  ModelNode.cpp  ModelNode.hpp  NDCsquare.cpp  NDCsquare.hpp  Node.cpp  Node.hpp  SceneElements.hpp  ScreenCanvas.cpp  ScreenCanvas.hpp  TerrainNode.hpp  WorldNode.cpp  WorldNode.hpp  animData.h  animation.cpp  animation.h  animator.h  assimp_glm_helpers.h  bone.h
src/libGraphics/sceneGraph/Model/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp
src/libGraphics/shaders/: CMakeLists.txt  Shader.cpp  Shader.hpp
src/test/: CMakeLists.txt
src/test/include/: fucntions.hpp
src/test/src/: main.cpp
